--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,13 @@
     <maven.compiler.source>11</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+    <!-- Sonar -->
+    <sonar.organization>cmartinferrer</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
     <!-- Plugin versions -->
     <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 
     <!-- Dependencies -->
     <jackson-databind.version>2.13.1</jackson-databind.version>
@@ -51,14 +56,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.21.0</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>1.3.2</version>
-          </dependency>
-        </dependencies>
+        <version>${maven-surefire-plugin.version}</version>
       </plugin>
     </plugins>
   </build>
